modified html aula02

--- a/exercises/exercicioAula02-02.html
+++ b/exercises/exercicioAula02-02.html
@@ -16,7 +16,7 @@
       </script>  
 
       <div id="webgl-output">     
-         <script type="module" src="exercicio02Aula02.js"></script>
+         <script type="module" src="exercicioAula02-02.js"></script>
       </div>
    </body>
 </html>
