--- a/exercises/exercicioAula02-01.html
+++ b/exercises/exercicioAula02-01.html
@@ -16,7 +16,7 @@
       </script>  
 
       <div id="webgl-output">     
-         <script type="module" src="exercicio01Aula02.js"></script>
+         <script type="module" src="exercicioAula02-01.js"></script>
       </div>
    </body>
 </html>
